# gooroom-task-manager

./: README.md  kr.gooroom.Gooroom-Task-Manager.json  meson.build
data/: kr.gooroom.Gooroom-Task-Manager.appdata.xml.in  kr.gooroom.Gooroom-Task-Manager.desktop.in  kr.gooroom.Gooroom-Task-Manager.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: gtm.gresource.xml  gtm_application.c  gtm_application.h  gtm_common_util.c  gtm_common_util.h  gtm_constants.h  gtm_main.c  gtm_models.h  gtm_process.c  gtm_process.h  gtm_text_view_model.c  gtm_text_view_model.h  gtm_tree_view_model.c  gtm_tree_view_model.h  gtm_window.c  gtm_window.h  gtm_window.ui  meson.build
